--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="icon" type="image/x-icon" href="Images/favicon.ico">
+    <link rel="icon" type="image/png" href="Images/logo.png">
 </head>
 <body>
     <!-- Business for Sale Notice -->
@@ -54,6 +56,7 @@
                 </h1>
                 <p class="hero-subtitle">Free Pick-Up & Delivery in Cainta – Trusted by STI, Max's, and Sip & Gogh.</p>
                 <p class="hero-trust">We're local, reliable, and loved by our community.</p>
+                <p class="hero-since">Serving Cainta since 2016</p>
                 <div class="hero-buttons">
                     <a href="#booking" class="cta-button hero-cta primary">
                         <i class="fas fa-calendar-plus"></i>
@@ -122,7 +125,7 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-text">
-                    <h2 class="section-title">Your Neighborhood Laundry with a Professional Touch</h2>
+                    <h2 class="section-title">Your Neighborhood Laundry with a Professional Touch <span class="since-badge">| Since 2016</span></h2>
                     <p>Located in the heart of Cainta, Rizal, Freshvibe Laundry Services has been serving our community with dedication and care. Our commitment to quality, reliability, and customer satisfaction has made us the trusted choice for both residential and commercial clients.</p>
                     <p>From our humble beginnings to becoming the preferred laundry service for major establishments like STI University, Max's Restaurant, and Sip & Gogh, we've maintained our core values of excellence and community service.</p>
                     <div class="about-features">
