Fix favicon paths for custom domain

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="icon" type="image/x-icon" href="Images/favicon.ico">
-    <link rel="icon" type="image/png" href="Images/logo.png">
+    <link rel="icon" type="image/x-icon" href="/Images/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/Images/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/Images/logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/Images/logo.png">
 </head>
 <body>
     <!-- Business for Sale Notice -->
