--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="/Images/favicon.ico">
     <link rel="shortcut icon" type="image/x-icon" href="/Images/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="/Images/logo.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/Images/logo.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/Images/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="/Images/favicon.ico">
 </head>
 <body>
     <!-- Business for Sale Notice -->
@@ -26,7 +26,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <img src="Images/logo.png" alt="Freshvibe Laundry" class="logo">
+                <img src="Images/favicon.ico" alt="Freshvibe Laundry" class="logo">
                 <span class="brand-text">Freshvibe Laundry</span>
             </div>
             <ul class="nav-menu">
@@ -364,7 +364,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-brand">
-                        <img src="Images/logo.png" alt="Freshvibe Laundry" class="logo">
+                        <img src="Images/favicon.ico" alt="Freshvibe Laundry" class="logo">
                         <h3>Freshvibe Laundry</h3>
                     </div>
                     <p>Fresh Clothes. Fresh Vibe. Premium laundry services in Cainta, Rizal.</p>
