Update website: Remove animations, add trust badge, update contact info, and prepare for new images

--- a/index.html
+++ b/index.html
@@ -14,13 +14,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/Images/logo.png">
 </head>
 <body>
-    <!-- Business for Sale Notice -->
-    <div class="notice-bar">
-        <div class="container">
-            <i class="fas fa-briefcase"></i>
-            <span><strong>Business Opportunity:</strong> Freshvibe Laundry Services is for sale as the owner is relocating to Sweden. Serious inquiries welcome.</span>
-        </div>
-    </div>
+
 
     <!-- Navigation -->
     <nav class="navbar">
@@ -50,6 +44,9 @@
             <img src="Images/storefront.jpg" alt="Freshvibe Laundry Storefront" class="hero-image">
             <div class="hero-overlay"></div>
         </div>
+        
+
+        
         <div class="container">
             <div class="hero-content">
                 <h1 class="hero-title">
@@ -69,6 +66,16 @@
                         Visit Our Facebook Page
                     </a>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Trust Badge Section -->
+    <section class="trust-badge-section">
+        <div class="container">
+            <div class="trust-badge">
+                <i class="fas fa-heart"></i>
+                <span>💙 Trusted by over 2,000 happy customers</span>
             </div>
         </div>
     </section>
@@ -311,7 +318,7 @@
                         <i class="fas fa-user"></i>
                         <div>
                             <h3>Contact Person</h3>
-                            <p>Myra Sulat</p>
+                            <p>John Capitin</p>
                         </div>
                     </div>
                     <div class="contact-item">
