Update follower count to 2K+ and replace about section images with new ones

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="container">
             <div class="trust-badge">
                 <i class="fas fa-heart"></i>
-                <span>💙 Trusted by over 2,000 happy customers</span>
+                <span>💙 Trusted by over 2,000+ happy customers</span>
             </div>
         </div>
     </section>
@@ -88,7 +88,7 @@
                     <i class="fab fa-facebook"></i>
                 </div>
                 <div class="facebook-content">
-                    <h2>❤️ Loved by thousands! Join our Facebook community with 1K+ followers.</h2>
+                    <h2>❤️ Loved by thousands! Join our Facebook community with 2K+ followers.</h2>
                     <p class="facebook-trust">Real Reviews. Real Results.</p>
                     <a href="https://www.facebook.com/share/19turm2XFt/" class="facebook-button" target="_blank">
                         <i class="fab fa-facebook-f"></i>
@@ -153,8 +153,9 @@
                     </div>
                 </div>
                 <div class="about-images">
-                    <img src="Images/storefront.jpg" alt="Freshvibe Laundry Storefront" class="about-image">
-                    <img src="Images/storefront-2.jpg" alt="Freshvibe Laundry Storefront" class="about-image">
+                    <img src="Images/image1.jpeg" alt="Freshvibe Laundry Service Highlight" class="about-image">
+                    <img src="Images/image2.jpeg" alt="Freshvibe Laundry Promotional Service" class="about-image">
+                    <img src="Images/image3.jpeg" alt="Freshvibe Laundry Brand Trust" class="about-image">
                 </div>
             </div>
         </div>
